seaqt/QtGui/gen_qtextobject.h

class QMetaMethod;
class QMetaObject;
class QObject;
typedef QTextBlock::iterator QTextBlock__iterator;
class QTextBlockGroup;
class QTextDocument;
class QTextFormat;
typedef QTextFrame::iterator QTextFrame__iterator;
class QTextObject;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QTextBlock QTextBlock;
typedef struct QTextBlock__iterator QTextBlock__iterator;
typedef struct QTextBlockGroup QTextBlockGroup;
typedef struct QTextCharFormat QTextCharFormat;
typedef struct QTextDocument QTextDocument;
typedef struct QTextFormat QTextFormat;
typedef struct QTextFragment QTextFragment;
typedef struct QTextFrame QTextFrame;
typedef struct QTextFrame__iterator QTextFrame__iterator;
typedef struct QTextObject QTextObject;
QTextBlock* QTextBlock_new();
QTextBlock* QTextBlock_new2(QTextBlock* o);
void QTextBlock_setUserState(QTextBlock* self, int state);
int QTextBlock_revision(const QTextBlock* self);
void QTextBlock_setRevision(QTextBlock* self, int rev);
bool QTextBlock_isVisible(const QTextBlock* self);
void QTextBlock_setVisible(QTextBlock* self, bool visible);
int QTextBlock_blockNumber(const QTextBlock* self);
int QTextBlock_firstLineNumber(const QTextBlock* self);
void QTextBlock_setLineCount(QTextBlock* self, int count);
int QTextBlock_lineCount(const QTextBlock* self);
QTextBlock__iterator* QTextBlock_begin(const QTextBlock* self);
QTextBlock__iterator* QTextBlock_end(const QTextBlock* self);
QTextBlock* QTextBlock_next(const QTextBlock* self);
QTextBlock* QTextBlock_previous(const QTextBlock* self);
int QTextBlock_fragmentIndex(const QTextBlock* self);
void QTextBlock_delete(QTextBlock* self);
QTextFragment* QTextFragment_new();
QTextFragment* QTextFragment_new2(QTextFragment* o);
void QTextFragment_operatorAssign(QTextFragment* self, QTextFragment* o);
bool QTextFragment_isValid(const QTextFragment* self);
bool QTextFragment_operatorEqual(const QTextFragment* self, QTextFragment* o);
bool QTextFragment_operatorNotEqual(const QTextFragment* self, QTextFragment* o);
bool QTextFragment_operatorLesser(const QTextFragment* self, QTextFragment* o);
int QTextFragment_position(const QTextFragment* self);
int QTextFragment_length(const QTextFragment* self);
bool QTextFragment_contains(const QTextFragment* self, int position);
QTextCharFormat* QTextFragment_charFormat(const QTextFragment* self);
int QTextFragment_charFormatIndex(const QTextFragment* self);
struct miqt_string QTextFragment_text(const QTextFragment* self);
struct miqt_array /* of QGlyphRun* */  QTextFragment_glyphRuns(const QTextFragment* self);
struct miqt_array /* of QGlyphRun* */  QTextFragment_glyphRuns1(const QTextFragment* self, int from);
struct miqt_array /* of QGlyphRun* */  QTextFragment_glyphRuns2(const QTextFragment* self, int from, int length);
void QTextFragment_delete(QTextFragment* self);
QTextFrame__iterator* QTextFrame__iterator_new();
QTextFrame__iterator* QTextFrame__iterator_new2(QTextFrame__iterator* param1);
QTextFrame* QTextFrame__iterator_parentFrame(const QTextFrame__iterator* self);
QTextFrame* QTextFrame__iterator_currentFrame(const QTextFrame__iterator* self);
QTextBlock* QTextFrame__iterator_currentBlock(const QTextFrame__iterator* self);
bool QTextFrame__iterator_atEnd(const QTextFrame__iterator* self);
bool QTextFrame__iterator_operatorEqual(const QTextFrame__iterator* self, QTextFrame__iterator* o);
bool QTextFrame__iterator_operatorNotEqual(const QTextFrame__iterator* self, QTextFrame__iterator* o);
QTextFrame__iterator* QTextFrame__iterator_operatorPlusPlus(QTextFrame__iterator* self);
QTextFrame__iterator* QTextFrame__iterator_operatorPlusPlusWithInt(QTextFrame__iterator* self, int param1);
QTextFrame__iterator* QTextFrame__iterator_operatorMinusMinus(QTextFrame__iterator* self);
QTextFrame__iterator* QTextFrame__iterator_operatorMinusMinusWithInt(QTextFrame__iterator* self, int param1);
void QTextFrame__iterator_delete(QTextFrame__iterator* self);
QTextBlock__iterator* QTextBlock__iterator_new();
QTextBlock__iterator* QTextBlock__iterator_new2(QTextBlock__iterator* param1);
QTextFragment* QTextBlock__iterator_fragment(const QTextBlock__iterator* self);
bool QTextBlock__iterator_atEnd(const QTextBlock__iterator* self);
bool QTextBlock__iterator_operatorEqual(const QTextBlock__iterator* self, QTextBlock__iterator* o);
bool QTextBlock__iterator_operatorNotEqual(const QTextBlock__iterator* self, QTextBlock__iterator* o);
QTextBlock__iterator* QTextBlock__iterator_operatorPlusPlus(QTextBlock__iterator* self);
QTextBlock__iterator* QTextBlock__iterator_operatorPlusPlusWithInt(QTextBlock__iterator* self, int param1);
QTextBlock__iterator* QTextBlock__iterator_operatorMinusMinus(QTextBlock__iterator* self);
QTextBlock__iterator* QTextBlock__iterator_operatorMinusMinusWithInt(QTextBlock__iterator* self, int param1);
void QTextBlock__iterator_delete(QTextBlock__iterator* self);