seaqt/QtGui/gen_qtextobject.nim

proc fcQTextBlock_setUserState(self: pointer, state: cint): void {.importc: "QTextBlock_setUserState".}
proc fcQTextBlock_revision(self: pointer, ): cint {.importc: "QTextBlock_revision".}
proc fcQTextBlock_setRevision(self: pointer, rev: cint): void {.importc: "QTextBlock_setRevision".}
proc fcQTextBlock_isVisible(self: pointer, ): bool {.importc: "QTextBlock_isVisible".}
proc fcQTextBlock_setVisible(self: pointer, visible: bool): void {.importc: "QTextBlock_setVisible".}
proc fcQTextBlock_blockNumber(self: pointer, ): cint {.importc: "QTextBlock_blockNumber".}
proc fcQTextBlock_firstLineNumber(self: pointer, ): cint {.importc: "QTextBlock_firstLineNumber".}
proc fcQTextBlock_setLineCount(self: pointer, count: cint): void {.importc: "QTextBlock_setLineCount".}
proc fcQTextBlock_lineCount(self: pointer, ): cint {.importc: "QTextBlock_lineCount".}
proc fcQTextBlock_begin(self: pointer, ): pointer {.importc: "QTextBlock_begin".}
proc fcQTextBlock_endX(self: pointer, ): pointer {.importc: "QTextBlock_end".}
proc fcQTextBlock_next(self: pointer, ): pointer {.importc: "QTextBlock_next".}
proc fcQTextBlock_previous(self: pointer, ): pointer {.importc: "QTextBlock_previous".}
proc fcQTextBlock_fragmentIndex(self: pointer, ): cint {.importc: "QTextBlock_fragmentIndex".}
proc fcQTextBlock_new(): ptr cQTextBlock {.importc: "QTextBlock_new".}
proc fcQTextBlock_new2(o: pointer): ptr cQTextBlock {.importc: "QTextBlock_new2".}
proc fcQTextBlock_delete(self: pointer) {.importc: "QTextBlock_delete".}
proc fcQTextFragment_operatorAssign(self: pointer, o: pointer): void {.importc: "QTextFragment_operatorAssign".}
proc fcQTextFragment_isValid(self: pointer, ): bool {.importc: "QTextFragment_isValid".}
proc fcQTextFragment_operatorEqual(self: pointer, o: pointer): bool {.importc: "QTextFragment_operatorEqual".}
proc fcQTextFragment_operatorNotEqual(self: pointer, o: pointer): bool {.importc: "QTextFragment_operatorNotEqual".}
proc fcQTextFragment_operatorLesser(self: pointer, o: pointer): bool {.importc: "QTextFragment_operatorLesser".}
proc fcQTextFragment_position(self: pointer, ): cint {.importc: "QTextFragment_position".}
proc fcQTextFragment_length(self: pointer, ): cint {.importc: "QTextFragment_length".}
proc fcQTextFragment_contains(self: pointer, position: cint): bool {.importc: "QTextFragment_contains".}
proc fcQTextFragment_charFormat(self: pointer, ): pointer {.importc: "QTextFragment_charFormat".}
proc fcQTextFragment_charFormatIndex(self: pointer, ): cint {.importc: "QTextFragment_charFormatIndex".}
proc fcQTextFragment_text(self: pointer, ): struct_miqt_string {.importc: "QTextFragment_text".}
proc fcQTextFragment_glyphRuns(self: pointer, ): struct_miqt_array {.importc: "QTextFragment_glyphRuns".}
proc fcQTextFragment_glyphRuns1(self: pointer, fromVal: cint): struct_miqt_array {.importc: "QTextFragment_glyphRuns1".}
proc fcQTextFragment_glyphRuns2(self: pointer, fromVal: cint, length: cint): struct_miqt_array {.importc: "QTextFragment_glyphRuns2".}
proc fcQTextFragment_new(): ptr cQTextFragment {.importc: "QTextFragment_new".}
proc fcQTextFragment_new2(o: pointer): ptr cQTextFragment {.importc: "QTextFragment_new2".}
proc fcQTextFragment_delete(self: pointer) {.importc: "QTextFragment_delete".}
proc fcQTextFrameiterator_operatorAssign(self: pointer, o: pointer): void {.importc: "QTextFrame__iterator_operatorAssign".}
proc fcQTextFrameiterator_parentFrame(self: pointer, ): pointer {.importc: "QTextFrame__iterator_parentFrame".}
proc fcQTextFrameiterator_currentFrame(self: pointer, ): pointer {.importc: "QTextFrame__iterator_currentFrame".}
proc fcQTextFrameiterator_currentBlock(self: pointer, ): pointer {.importc: "QTextFrame__iterator_currentBlock".}
proc fcQTextFrameiterator_atEnd(self: pointer, ): bool {.importc: "QTextFrame__iterator_atEnd".}
proc fcQTextFrameiterator_operatorEqual(self: pointer, o: pointer): bool {.importc: "QTextFrame__iterator_operatorEqual".}
proc fcQTextFrameiterator_operatorNotEqual(self: pointer, o: pointer): bool {.importc: "QTextFrame__iterator_operatorNotEqual".}
proc fcQTextFrameiterator_operatorPlusPlus(self: pointer, ): pointer {.importc: "QTextFrame__iterator_operatorPlusPlus".}
proc fcQTextFrameiterator_operatorPlusPlusWithInt(self: pointer, param1: cint): pointer {.importc: "QTextFrame__iterator_operatorPlusPlusWithInt".}
proc fcQTextFrameiterator_operatorMinusMinus(self: pointer, ): pointer {.importc: "QTextFrame__iterator_operatorMinusMinus".}
proc fcQTextFrameiterator_operatorMinusMinusWithInt(self: pointer, param1: cint): pointer {.importc: "QTextFrame__iterator_operatorMinusMinusWithInt".}
proc fcQTextFrameiterator_new(): ptr cQTextFrameiterator {.importc: "QTextFrame__iterator_new".}
proc fcQTextFrameiterator_new2(o: pointer): ptr cQTextFrameiterator {.importc: "QTextFrame__iterator_new2".}
proc fcQTextFrameiterator_delete(self: pointer) {.importc: "QTextFrame__iterator_delete".}
proc fcQTextBlockiterator_operatorAssign(self: pointer, o: pointer): void {.importc: "QTextBlock__iterator_operatorAssign".}
proc fcQTextBlockiterator_fragment(self: pointer, ): pointer {.importc: "QTextBlock__iterator_fragment".}
proc fcQTextBlockiterator_atEnd(self: pointer, ): bool {.importc: "QTextBlock__iterator_atEnd".}
proc fcQTextBlockiterator_operatorEqual(self: pointer, o: pointer): bool {.importc: "QTextBlock__iterator_operatorEqual".}
proc fcQTextBlockiterator_operatorNotEqual(self: pointer, o: pointer): bool {.importc: "QTextBlock__iterator_operatorNotEqual".}
proc fcQTextBlockiterator_operatorPlusPlus(self: pointer, ): pointer {.importc: "QTextBlock__iterator_operatorPlusPlus".}
proc fcQTextBlockiterator_operatorPlusPlusWithInt(self: pointer, param1: cint): pointer {.importc: "QTextBlock__iterator_operatorPlusPlusWithInt".}
proc fcQTextBlockiterator_operatorMinusMinus(self: pointer, ): pointer {.importc: "QTextBlock__iterator_operatorMinusMinus".}
proc fcQTextBlockiterator_operatorMinusMinusWithInt(self: pointer, param1: cint): pointer {.importc: "QTextBlock__iterator_operatorMinusMinusWithInt".}
proc fcQTextBlockiterator_new(): ptr cQTextBlockiterator {.importc: "QTextBlock__iterator_new".}
proc fcQTextBlockiterator_new2(o: pointer): ptr cQTextBlockiterator {.importc: "QTextBlock__iterator_new2".}
proc fcQTextBlockiterator_delete(self: pointer) {.importc: "QTextBlock__iterator_delete".}

proc metaObject*(self: gen_qtextobject_types.QTextObject, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQTextObject_metaObject(self.h))

proc metacast*(self: gen_qtextobject_types.QTextObject, param1: cstring): pointer =
  fcQTextObject_metacast(self.h, param1)

proc metacall*(self: gen_qtextobject_types.QTextObject, param1: cint, param2: cint, param3: pointer): cint =
  fcQTextObject_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qtextobject_types.QTextObject, s: cstring): string =
  let v_ms = fcQTextObject_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qtextobject_types.QTextObject, s: cstring): string =
  let v_ms = fcQTextObject_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc format*(self: gen_qtextobject_types.QTextObject, ): gen_qtextformat_types.QTextFormat =
  gen_qtextformat_types.QTextFormat(h: fcQTextObject_format(self.h))

proc formatIndex*(self: gen_qtextobject_types.QTextObject, ): cint =
  fcQTextObject_formatIndex(self.h)

proc document*(self: gen_qtextobject_types.QTextObject, ): gen_qtextdocument_types.QTextDocument =
  gen_qtextdocument_types.QTextDocument(h: fcQTextObject_document(self.h))

proc objectIndex*(self: gen_qtextobject_types.QTextObject, ): cint =
  fcQTextObject_objectIndex(self.h)

proc tr*(_: type gen_qtextobject_types.QTextObject, s: cstring, c: cstring): string =
  let v_ms = fcQTextObject_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr*(_: type gen_qtextobject_types.QTextObject, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQTextObject_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qtextobject_types.QTextObject, s: cstring, c: cstring): string =
  let v_ms = fcQTextObject_trUtf82(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qtextobject_types.QTextObject, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQTextObject_trUtf83(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setFormat*(self: gen_qtextobject_types.QTextObject, format: gen_qtextformat_types.QTextFormat): void =
  fcQTextObject_protectedbase_setFormat(self.h, format.h)

proc sender*(self: gen_qtextobject_types.QTextObject, ): gen_qobject_types.QObject =
  gen_qobject_types.QObject(h: fcQTextObject_protectedbase_sender(self.h))

proc senderSignalIndex*(self: gen_qtextobject_types.QTextObject, ): cint =
  fcQTextObject_protectedbase_senderSignalIndex(self.h)

proc receivers*(self: gen_qtextobject_types.QTextObject, signal: cstring): cint =
  fcQTextObject_protectedbase_receivers(self.h, signal)

proc isSignalConnected*(self: gen_qtextobject_types.QTextObject, signal: gen_qmetaobject_types.QMetaMethod): bool =
  fcQTextObject_protectedbase_isSignalConnected(self.h, signal.h)

proc staticMetaObject*(_: type gen_qtextobject_types.QTextObject): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQTextObject_staticMetaObject())
proc metaObject*(self: gen_qtextobject_types.QTextBlockGroup, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQTextBlockGroup_metaObject(self.h))

proc metacast*(self: gen_qtextobject_types.QTextBlockGroup, param1: cstring): pointer =
  fcQTextBlockGroup_metacast(self.h, param1)

proc metacall*(self: gen_qtextobject_types.QTextBlockGroup, param1: cint, param2: cint, param3: pointer): cint =
  fcQTextBlockGroup_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qtextobject_types.QTextBlockGroup, s: cstring): string =
  let v_ms = fcQTextBlockGroup_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qtextobject_types.QTextBlockGroup, s: cstring): string =
  let v_ms = fcQTextBlockGroup_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr*(_: type gen_qtextobject_types.QTextBlockGroup, s: cstring, c: cstring): string =
  let v_ms = fcQTextBlockGroup_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr*(_: type gen_qtextobject_types.QTextBlockGroup, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQTextBlockGroup_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qtextobject_types.QTextBlockGroup, s: cstring, c: cstring): string =
  let v_ms = fcQTextBlockGroup_trUtf82(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qtextobject_types.QTextBlockGroup, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQTextBlockGroup_trUtf83(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret
